--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
-{% include head.html %}
+  {% include head.html %}
 
-<body>
 
-    {% include nav.html %}
+    <body id="page-top" class="index">
 
-    {{ content }}
+    {% include header.html %}
+    {% include skills.html %}
+    {% include portfolio_grid.html %}
+    {% include about.html %}
+   <1-- {% include blog.html %} --></1-->
+    {% include clients.html %}
+    {% include contact.html %}
+    {% include footer.html %}
+    {% include modals.html %}
+    {% include js.html %}
 
-</body>
-
+    </body>
 </html>
