--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">{{site.title}}</a>
             </div>
-
+   
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
@@ -33,8 +33,14 @@
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
+                    {% for network in site.social %}
+                    <li><a href="{{ network.url }}"><i class="fa fa-{{ network.title }} fa-lg"></i></a>
+                    </li>
+                    {% endfor %}
                 </ul>
+             
             </div>
+          
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container-fluid -->
